<resources>
    <string name="app_name">Comperio</string>
    <string name="EXTRA_SCHEDULE_ID">extra_schedule_id</string>
    <string name="lblWhatDoYouWantToLearn">What do you want to learn?</string>
    <string name="lblHome">Home</string>
    <string name="lblFavorites">Favorites</string>
    <string name="lblFilters">Filters</string>
    <string name="lblNext">Next</string>
    <string name="lblWhenAreYouAvailable">When are you available?</string>
    <string name="lblLetsTalk">Let\'s Talk</string>
    <string name="lblSaveFilters">Save and Sync</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblRecurrence">Days of the week</string>
    <string name="lblUseMetricSystem">Use Metric System</string>
    <string name="lblSelectSubject">Please select a subject</string>
    <string name="lblSubject">Subject</string>
    <string name="ctDescTeacherPic">Teacher profile picture</string>
    <string name="ctDescFab">Publish a new schedule</string>
    <string name="pref_subject">pref_subject</string>
    <string name="pref_recurrence">pref_recurrence</string>
    <string name="pref_metric">pref_metric</string>
    <string name="pref_startHour">pref_startHour</string>
    <string name="pref_startMinute">pref_startMinute</string>
    <string name="pref_endHour">pref_endHour</string>
    <string name="pref_endMinute">pref_endMinute</string>
    <string name="pref_default_distance">2000</string>
    <string name="pref_distance">pref_distance</string>
    <string name="pref_initialized">pref_initialized</string>
    <string name="sync_account_type">comperio.rigel.com</string>
    <string name="content_authority">com.rigel.comperio</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_filters">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="EXTRA_SCHEDULE">EXTRA_SCHEDULE</string>
    <string name="FILTER_KEY">filter_key</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="SHARED_PREFERENCES_KEY">shared_pref_key</string>
    <string name="schedule_thumbnail">Schedule Thumbnail</string>
    <string name="teacher">teacher</string>
    <string name="lblLetTalk">Let\'s Talk!</string>
    <string name="lblDistance">Distance</string>
    <string name="lblSettings">Settings</string>
    <string name="lblNewSchedule">New Schedule</string>
    <string name="hintName">John Doe</string>
    <string name="phoneHint">(555) 1234 432</string>
    <string name="hintTeacherStory">Ever since I traveled to shangri-la I fell in love with</string>
    <string name="lblPerHour">/hour</string>
    <string name="hintHouRate">34.3</string>
    <string name="btnChooseLocation">Location</string>
    <string name="btnPublish">Publish</string>
    <string name="btnNewSchedule">+</string>
    <string name="msg_fail_fetch_location">Failed to get location</string>
    <string name="msg_location_disabled">Location won\'t be used</string>
    <string name="hintSubject">Mandarin</string>
    <string name="msg_location_saved">Location saved.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widgetThbImage">Teacher profile picture</string>
    <string name="SUGGESTED_SCHEDULE_KEY">suggested_schedule_key</string>
    <string name="msg_no_data_available">No data available</string>
    <string name="teacherPicTransitionName">teacherPicTransition</string>
    <string name="msg_removed_favorite">Removed from favorites</string>
    <string name="msg_added_favorite">Added to favorites</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_remove">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_rotate_right">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_dedent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_image">&#xf03e;</string>
    <string name="fa_photo">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_step_forward">&#xf051;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_plus_circle">&#xf055;</string>
    <string name="fa_minus_circle">&#xf056;</string>
    <string name="fa_times_circle">&#xf057;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_question_circle">&#xf059;</string>
    <string name="fa_info_circle">&#xf05a;</string>
    <string name="fa_crosshairs">&#xf05b;</string>
    <string name="fa_times_circle_o">&#xf05c;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_share">&#xf064;</string>
    <string name="fa_mail_forward">&#xf064;</string>
    <string name="fa_expand">&#xf065;</string>
    <string name="fa_compress">&#xf066;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_minus">&#xf068;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_exclamation_circle">&#xf06a;</string>
    <string name="fa_gift">&#xf06b;</string>
    <string name="fa_leaf">&#xf06c;</string>
    <string name="fa_fire">&#xf06d;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="fa_eye_slash">&#xf070;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_warning">&#xf071;</string>
    <string name="fa_plane">&#xf072;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_random">&#xf074;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_magnet">&#xf076;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_retweet">&#xf079;</string>
    <string name="fa_shopping_cart">&#xf07a;</string>
    <string name="fa_folder">&#xf07b;</string>
    <string name="fa_folder_open">&#xf07c;</string>
    <string name="fa_arrows_v">&#xf07d;</string>
    <string name="fa_arrows_h">&#xf07e;</string>
    <string name="fa_bar_chart">&#xf080;</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_twitter_square">&#xf081;</string>
    <string name="fa_facebook_square">&#xf082;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_key">&#xf084;</string>
    <string name="fa_cogs">&#xf085;</string>
    <string name="fa_gears">&#xf085;</string>
    <string name="fa_comments">&#xf086;</string>
    <string name="fa_thumbs_o_up">&#xf087;</string>
    <string name="fa_thumbs_o_down">&#xf088;</string>
    <string name="fa_star_half">&#xf089;</string>
    <string name="fa_heart_o">&#xf08a;</string>
    <string name="fa_sign_out">&#xf08b;</string>
    <string name="fa_linkedin_square">&#xf08c;</string>
    <string name="fa_thumb_tack">&#xf08d;</string>
    <string name="fa_external_link">&#xf08e;</string>
    <string name="fa_sign_in">&#xf090;</string>
    <string name="fa_trophy">&#xf091;</string>
    <string name="fa_github_square">&#xf092;</string>
    <string name="fa_upload">&#xf093;</string>
    <string name="fa_lemon_o">&#xf094;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_square_o">&#xf096;</string>
    <string name="fa_bookmark_o">&#xf097;</string>
    <string name="fa_phone_square">&#xf098;</string>
    <string name="fa_twitter">&#xf099;</string>
    <string name="fa_facebook">&#xf09a;</string>
    <string name="fa_facebook_f">&#xf09a;</string>
    <string name="fa_github">&#xf09b;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
</resources>