<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newScheduleViewModel"
            type="com.rigel.comperio.viewmodel.NewScheduleViewModel" />

        <variable
            name="spinnerAdapter"
            type="android.widget.ArrayAdapter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/people_coffee"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            style="@style/width_match_parent_max_width"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:background="#f7ffffff"
            tools:context="com.rigel.comperio.view.NewScheduleActivity">

            <com.rigel.comperio.view.IconTextView
                android:id="@+id/iconTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:gravity="start"
                android:text="@string/fa_bullhorn"
                android:textColor="@color/accent"
                android:textSize="50sp"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblNewSchedule"
                android:textColor="@color/accent"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/iconTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iconTextView" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/hintName"
                android:inputType="textPersonName"
                android:text="@={newScheduleViewModel.schedule.teacherName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:text="@={newScheduleViewModel.schedule.teacherPhone}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:adapter="@{spinnerAdapter}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/hintHouRate"
                android:inputType="numberDecimal"
                android:text="@={newScheduleViewModel.hourPrice}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <TextView
                android:layout_width="139dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:text="@string/lblPerHour"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/editText4"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />


            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hintTeacherStory"
                android:inputType="textMultiLine"
                android:maxLength="120"
                android:minHeight="100dp"
                android:text="@={newScheduleViewModel.schedule.teacherStory}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:background="@color/accent"
                android:textColor="@color/bpWhite"
                android:onClick="@{newScheduleViewModel::onClickPublish}"
                android:text="@string/btnPublish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText5" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>